# NotrealEngine

./: CMakeLists.txt  README.md  axis.cpp  glad.c  main.cpp  test.cpp
Shaders/: fragmentShader.glsl  vertexShader.glsl
lib/GLAD/: glad.c
lib/GLAD/include/glad/: glad.h
lib/STB/: stb_image.h
lib/camera/: camera.h
shaders/: dualTexture.fs  dualTexture.vs  fragmentShader.glsl  lightCube.fs  lightCube.vs  lighting.fs  lighting.vs  shader.h
src/: actor.cpp  actor.h  main.cpp
